--- a/style.css
+++ b/style.css
@@ -360,6 +360,7 @@ body
     }
     .gridContainer .flexcard
     {
+        width: 80%;
         display: grid;
         grid-template-columns: 1fr;
         margin: 20px 0;
